--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -45,6 +45,8 @@
     z-index: 2;
     text-align: center;
     max-width: 900px;
+    width: 100%;
+    margin: 0 auto;
     padding: 0 40px;
     opacity: 0;
     transform: translateY(30px);
